--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@stylistic/eslint-plugin": "^2.3.0",
-    "eslint-plugin-n": "^17.9.0"
+    "@stylistic/eslint-plugin": "2.6.0-beta.0",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.34",
+    "@typescript-eslint/utils": "8.0.0-alpha.34",
+    "eslint-plugin-n": "^17.9.0",
+    "typescript-eslint": "8.0.0-alpha.34"
   },
   "devDependencies": {
     "eslint": "^9.6.0",
