--- a/package.json
+++ b/package.json
@@ -23,6 +23,32 @@
     "lint:fix": "npm run lint -- --fix",
     "prepare": "husky"
   },
+  "keywords": [
+    "JavaScript Standard Style",
+    "check",
+    "checker",
+    "code",
+    "code checker",
+    "code linter",
+    "code standards",
+    "code style",
+    "enforce",
+    "eslint",
+    "eslintconfig",
+    "hint",
+    "jscs",
+    "jshint",
+    "lint",
+    "policy",
+    "quality",
+    "simple",
+    "standard",
+    "standard style",
+    "style",
+    "style checker",
+    "style linter",
+    "verify"
+  ],
   "dependencies": {
     "@stylistic/eslint-plugin": "2.6.0-beta.0",
     "@typescript-eslint/eslint-plugin": "8.0.0-alpha.34",
