--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
+    "test": "mocha test --recursive --verbose --color",
     "prepare": "husky"
   },
   "keywords": [
@@ -59,8 +60,10 @@
   },
   "devDependencies": {
     "@sequencemedia/hooks": "^1.0.497",
+    "chai": "^5.1.1",
     "eslint": "^9.6.0",
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "mocha": "^10.6.0"
   },
   "peerDependencies": {
     "eslint": ">=9"
