--- a/package.json
+++ b/package.json
@@ -51,12 +51,9 @@
     "test": "mocha test --recursive --verbose --color"
   },
   "dependencies": {
-    "@stylistic/eslint-plugin": "2.6.0-beta.0",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.34",
-    "@typescript-eslint/utils": "8.0.0-alpha.34",
+    "@stylistic/eslint-plugin": "^2.11.0",
     "eslint-plugin-n": "^17.14.0",
-    "globals": "^15.13.0",
-    "typescript-eslint": "8.0.0-alpha.34"
+    "globals": "^15.13.0"
   },
   "devDependencies": {
     "chai": "^5.1.2",
