--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
   "dependencies": {
     "@sequencemedia/eslint-merge": "^0.0.0",
     "@stylistic/eslint-plugin": "^2.11.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^17.14.0",
+    "eslint-plugin-promise": "^7.2.1",
     "globals": "^15.13.0"
   },
   "devDependencies": {
