--- a/package.json
+++ b/package.json
@@ -70,16 +70,15 @@
   "imports": {
     "#eslint-config-standard": "./index.mjs",
     "#eslint-config-standard/common": "./common/index.mjs",
-    "#eslint-config-standard/config": "./config/index.mjs",
-    "#eslint-config-standard/config/*": "./config/*.mjs",
+    "#eslint-config-standard/configs": "./configs/index.mjs",
+    "#eslint-config-standard/configs/*": "./configs/*.mjs",
     "#eslint-config-standard/merge": "./merge.mjs",
     "#eslint-config-standard/merge/*": "./merge/*.mjs"
   },
   "exports": {
     ".": "./index.mjs",
-    "./common": "./common/index.mjs",
-    "./config": "./config/index.mjs",
-    "./config/*": "./config/*.mjs",
+    "./configs": "./configs/index.mjs",
+    "./configs/*": "./configs/*.mjs",
     "./merge": "./merge.mjs",
     "./merge/*": "./merge/*.mjs"
   }
