--- a/package.json
+++ b/package.json
@@ -72,14 +72,12 @@
     "#eslint-config-standard/common": "./common/index.mjs",
     "#eslint-config-standard/configs": "./configs/index.mjs",
     "#eslint-config-standard/configs/*": "./configs/*.mjs",
-    "#eslint-config-standard/merge": "./merge.mjs",
-    "#eslint-config-standard/merge/*": "./merge/*.mjs"
+    "#eslint-config-standard/merge": "./merge.mjs"
   },
   "exports": {
     ".": "./index.mjs",
     "./configs": "./configs/index.mjs",
     "./configs/*": "./configs/*.mjs",
-    "./merge": "./merge.mjs",
-    "./merge/*": "./merge/*.mjs"
+    "./merge": "./merge.mjs"
   }
 }
