--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "test": "mocha test --recursive --verbose --color"
   },
   "dependencies": {
-    "@sequencemedia/eslint-merge": "^0.0.14",
+    "@sequencemedia/eslint-merge": "^0.0.15",
     "@stylistic/eslint-plugin": "^4.0.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^17.15.1",
@@ -59,6 +59,7 @@
     "globals": "^16.0.0"
   },
   "devDependencies": {
+    "@types/eslint": "^9.6.1",
     "chai": "^5.2.0",
     "eslint": "^9.21.0",
     "husky": "^9.1.7",
