--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "globals": "^16.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^5.0.1",
     "@types/eslint": "^9.6.1",
+    "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
     "eslint": "^9.21.0",
     "husky": "^9.1.7",
