--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,24 +8,6 @@
     "noEmit": true,
     "strict": true,
     "isolatedModules": true,
-    "baseUrl": ".",
-    "paths": {
-      "#eslint-config-standard": [
-        "index.mjs"
-      ],
-      "#eslint-config-standard/merge": [
-        "merge.mjs"
-      ],
-      "#eslint-config-standard/configs": [
-        "configs/index.mjs"
-      ],
-      "#eslint-config-standard/configs/*": [
-        "configs/*.mjs"
-      ]
-    }
-  },
-  "include": [
-    ".",
-    "configs/**/*"
-  ]
+    "baseUrl": "."
+  }
 }
